# memory-hub

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: load-memories.sh
benchmarks/: analyze-failures.py
demos/ogx-memory/ogx-memory-agent/: .gitignore  .memoryhub.yaml  AGENTS.md  Containerfile  Makefile  README.md  agent.yaml  identity.md  personality.md  pyproject.toml
demos/ogx-memory/ogx-memory-agent/.claude/commands/: add-hook.md
demos/ogx-memory/ogx-memory-agent/chart/: Chart.yaml  values.yaml
demos/ogx-memory/ogx-memory-agent/chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  route.yaml  service.yaml
demos/ogx-memory/ogx-memory-agent/hooks/: fetch-memory.sh  setup-memory.yaml
demos/ogx-memory/ogx-memory-agent/prompts/: system.md
demos/ogx-memory/ogx-memory-agent/src/: agent.py
docs/: ARCHITECTURE.md  README.md  SYSTEMS.md  agent-integration-guide.md  context-assembly-at-inference.md  graph-enhanced-memory.md  how-agents-use-memoryhub.md  ogx-integration.md
memory-hub-mcp/: ARCHITECTURE.md  Containerfile  README.md  SYSTEM_PROMPT.md  requirements.txt
memoryhub-agents/: pyproject.toml
memoryhub-auth/: deploy.sh  openshift.yaml
memoryhub-cli/: CHANGELOG.md  README.md  pyproject.toml
planning/: hooks-memory-injection.md  platform-memory-benchmark.md
research/: mempalace-comparison.md
scripts/: cluster-health-check.sh  deploy-evalhub.sh  smoke-test-sdk.py
sdk/: CHANGELOG.md  README.md  pyproject.toml
(+151 files in other folders)
